feat: added some docs
