# docs/swagger.yaml
@@ -23,6 +23,13 @@ definitions:
       error:
         $ref: '#/definitions/domain.ErrorResponse'
     type: object
+  model.Attribute:
+    properties:
+      score:
+        type: number
+      word:
+        type: string
+    type: object
   model.Profile:
     properties:
       aboutMe:
@@ -39,6 +46,21 @@ definitions:
         type: string
       salary:
         type: integer
+      workFormat:
+        type: string
+    type: object
+  model.Vacancy:
+    properties:
+      city:
+        type: string
+      jobTitle:
+        type: string
+      link:
+        type: string
+      salary:
+        type: integer
+      score:
+        type: number
       workFormat:
         type: string
     type: object
@@ -80,6 +102,79 @@ paths:
           description: OK
       tags:
       - health
+  /llm/analysis:
+    post:
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Attribute'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+      security:
+      - BearerAuth: []
+      tags:
+      - llm
+  /llm/generate:
+    post:
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+      security:
+      - BearerAuth: []
+      tags:
+      - llm
+  /llm/vacancies:
+    post:
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Vacancy'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorWrapper'
+      security:
+      - BearerAuth: []
+      tags:
+      - llm
   /user/has-profile:
     get:
       responses:
